# cmdhub-oss

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  FAQ.md  LICENSE  README.md  README.zh-CN.md  clippy.toml  deny.toml  flake.nix  rustfmt.toml  typos.toml
.cargo/: audit.toml
.github/: SECURITY.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_tool_submission.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
benches/: .gitkeep
cmdhub-cli/: Cargo.toml
cmdhub-cli/src/: auth.rs  config.rs  db.rs  dto.rs  inference.rs  installer.rs  lib.rs  main.rs  os_detector.rs  robustness.rs  runner.rs  tokenizer.rs  updater.rs
cmdhub-cli/tests/: auth_integration_tests.rs  boundary_tests.rs  cli_integration_tests.rs  concurrency_tests.rs  disaster_recovery_tests.rs  e2e_real_auth.py  platform_matrix_tests.rs  scale_benchmark.rs  search_precision.rs  search_robustness.rs
cmdhub-mcp/: Cargo.toml
cmdhub-mcp/src/: main.rs
cmdhub-mcp/tests/: mcp_integration_tests.rs
cmdhub-shared/: Cargo.toml
cmdhub-shared/src/: aci.rs  error.rs  lib.rs
cmdhub-skills/: Cargo.toml  SKILL.md
cmdhub-skills/src/: lib.rs  skill.rs
data/: intent_golden.json  search_overrides.json
docs/: configuration.md  probe-batch-runbook.md
packaging/: nfpm.yaml
packaging/aur/: PKGBUILD
packaging/homebrew/: cmdh.rb
packaging/scoop/: cmdh.json
schemas/: aci-command-contract.schema.json
scripts/: adapter_aur.py  adapter_crates.py  adapter_npm.py  adapter_pypi.py  apply_enrich.py  build_db.py  build_db_gpu.sh  calibrate_ood.py  calibrate_relevance.py  clean_index.py  drop_broken_prefix_dupes.py  enrich_crossos_bypkg.py  enrich_lang_pm.py  enrich_repology.py  enrich_repology_dump.py  enrich_topics.py  eval_coverage.py  eval_golden.py  eval_intent.py  eval_search.py  export_sqlite.py  fix_arch_aur.py  fix_data_quality.py  fix_golden_eval.py  gen_delta.py  gen_head_intents.py  gen_seo_shards.py  import_deep_cli.py  import_probe_results.py  import_registry.py  llm_enrich.py  llm_fix_fabricated.py  merge_probe_into_master.py  popularity_from_repology.py  publish_r2.sh  reprobe_batch.py  select_probe_targets.py  seo_shards.py  sign_db.py  sweep_fabrications.py  (+9 more)
scripts/sandbox_probe/: Containerfile.arch-probe-base  RUNBOOK.md  __main__.py  checkpoint.py  container.py  probe_one.py  queue.py  runner.py
scripts/sandbox_probe/tests/: test_checkpoint.py  test_queue.py
scripts/tests/: test_dedup.py  test_gen_head_intents.py  test_provenance.py  test_seo_shards.py  test_validate_provenance.py
scripts/tests/fixtures/: sample_export.json
tests/: .gitkeep
