[workspace]
members = [
    "cmdhub-shared",
    "cmdhub-cli",
    "cmdhub-mcp",
    "cmdhub-skills",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Xuepoo/cmdhub-oss"
authors = ["CmdHub Contributors"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging (to STDERR)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1.9"

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Cryptography
ed25519-dalek = { version = "2", features = ["serde"] }

# Compression
zstd = "0.13"
flate2 = "1.0"

# Tract ONNX
tract-onnx = { version = "0.21.3" }

# XDG paths
directories = "6"

# File locking
fs2 = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
