[package]
name = "cmdhub-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "cmdh — the CmdHub CLI client for offline command search and execution"
default-run = "cmdh"

[[bin]]
name = "cmdh"
path = "src/main.rs"

[dependencies]
cmdhub-shared = { path = "../cmdhub-shared" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
zstd = { workspace = true }
directories = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
