[package]
name = "cmdhub-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for CmdHub — enables AI Agents to search and execute CLI commands"

[[bin]]
name = "cmdhub-mcp"
path = "src/main.rs"

[dependencies]
cmdhub-shared = { path = "../cmdhub-shared" }
cmdhub-cli = { path = "../cmdhub-cli" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
directories = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
