[package]
name = "cmdhub-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and ACI schema definitions for CmdHub"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
