[package]
name = "cmdhub-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin/skill system for CmdHub — extensible command discovery and execution strategies"

[dependencies]
cmdhub-shared = { path = "../cmdhub-shared" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
